[package]
name = "rpn"
version = "0.1.2"
edition = "2021"
license = "BSD-2-Clause"
authors = ["Bas Bossink <bas.bossink@gmail.com>"]
repository = "https://github.com/basbossink/rpn"

[profile.release]
strip = true
#debug = true
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"

[dependencies]
assert_cmd = "2.0.6"
predicates = "2.1.3"
